--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Gilroy ExtraBold';
 }
 html,body{
   width: 100%;
@@ -22,6 +21,7 @@ html,body{
   z-index: 2;
   height: 100vh;
   width: 100%;
+  font-family: 'Gilroy ExtraBold';
 }
 .docs{
   position: absolute;
@@ -47,6 +47,62 @@ html,body{
   width: 100%;
   position: fixed;
   z-index: 3;
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  flex-wrap: wrap;
   top: 0;
-    left: 0;  
+  left: 0;  
+}
+.card{
+  height: 18vw;
+  width: 15vw;
+  border-radius: 30px;
+  background-color: #1B191D;
+  opacity: 80%;
+  color: white;
+  padding: 15px 10px;
+  font-size: 10px;
+  position: relative;
+  overflow: hidden;
+  flex-shrink: 0;
+  font-family: 'Trebuchet MS';
+}
+.card p{
+  margin-top: 2vw;
+  line-height: 1.1vw;
+}
+.footer{
+  width: 100%;
+  position: absolute;
+  bottom: 1rem;
+  height: 2.5rem;
+  left: 0;
+}
+.footer-content{
+  display: flex;
+  align-items: center;
+  padding:0vw 1.5vw;
+  justify-content: space-between;
+  margin-bottom: 1vw;
+}
+.footer-content span{
+  border-radius: 50%;
+  width: 1rem;
+  height: 1rem;
+  background-color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-content2{
+  width: 100%;
+  height: 4rem;
+  /* background-color: rgb(60, 211, 46); */
+}
+.footer-content2 h3{
+  text-align: center;
+  padding-top: 8px;
+  font-size: small;
+  font-size: 10px;
 }
